--- a/top_stories/week/page2.html
+++ b/top_stories/week/page2.html
@@ -355,12 +355,12 @@
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17190326">134 comments</a> &nbsp;•&nbsp;
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17190326">135 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=p1esk">p1esk</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527705455"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    314 points
+                                    316 points
                                 </span>
                             </td>
                         </tr>
@@ -477,14 +477,14 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://github.com/npm/npm/issues/20791">NPM proxy users receiving ERR 418 I'm a teapot</a>
+                                    <a href="https://actix.rs/">Actix: a small, pragmatic, and fast Rust web framework</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17175960">250 comments</a> &nbsp;•&nbsp;
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17190705">70 comments</a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=spondyl">spondyl</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527559843"
+                                            href="https://news.ycombinator.com/user?id=fafhrd91">fafhrd91</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527707401"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     294 points
                                 </span>
@@ -535,7 +535,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527746448" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527747004" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
