--- a/top_stories/week/page3.html
+++ b/top_stories/week/page3.html
@@ -183,16 +183,16 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://actix.rs/">Actix: a small, pragmatic, and fast Rust web framework</a>
+                                    <a href="https://github.com/npm/npm/issues/20791">NPM proxy users receiving ERR 418 I'm a teapot</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17190705">70 comments</a> &nbsp;•&nbsp;
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17175960">250 comments</a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=fafhrd91">fafhrd91</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527707401"
+                                            href="https://news.ycombinator.com/user?id=spondyl">spondyl</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527559843"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    291 points
+                                    294 points
                                 </span>
                             </td>
                         </tr>
@@ -288,16 +288,16 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://medium.com/@gc/su-is-moving-to-mix-c2c3bff037a5">StumbleUpon closing after 16 years, accounts can be migrated to Mix</a>
+                                    <a href="https://www.opendemocracy.net/uk/james-cusick/george-osborne-s-london-evening-standard-promises-positive-news-coverage-to-uber-goo">Uber, Google and others pay London Evening Standard for favorable coverage</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17143543">129 comments</a> &nbsp;•&nbsp;
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17190709">43 comments</a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=john58">john58</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527167104"
+                                            href="https://news.ycombinator.com/user?id=tomjakubowski">tomjakubowski</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527707442"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    278 points
+                                    282 points
                                 </span>
                             </td>
                         </tr>
@@ -309,16 +309,16 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.opendemocracy.net/uk/james-cusick/george-osborne-s-london-evening-standard-promises-positive-news-coverage-to-uber-goo">Uber, Google and others pay London Evening Standard for favorable coverage</a>
+                                    <a href="https://medium.com/@gc/su-is-moving-to-mix-c2c3bff037a5">StumbleUpon closing after 16 years, accounts can be migrated to Mix</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17190709">43 comments</a> &nbsp;•&nbsp;
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17143543">129 comments</a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=tomjakubowski">tomjakubowski</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527707442"
+                                            href="https://news.ycombinator.com/user?id=john58">john58</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527167104"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    277 points
+                                    278 points
                                 </span>
                             </td>
                         </tr>
@@ -486,7 +486,7 @@
                                             href="https://news.ycombinator.com/user?id=giffarage">giffarage</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527514410"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    257 points
+                                    258 points
                                 </span>
                             </td>
                         </tr>
@@ -535,7 +535,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527746448" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527747004" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
