--- a/top_stories/halfweek/page5.html
+++ b/top_stories/halfweek/page5.html
@@ -243,7 +243,7 @@
                                             href="https://news.ycombinator.com/user?id=Tomte">Tomte</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527708678"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    136 points
+                                    138 points
                                 </span>
                             </td>
                         </tr>
@@ -519,17 +519,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://bugzilla.mozilla.org/1460069">Shadow DOM enabled in Firefox nightly</a>
+                                    <a href="https://www.theguardian.com/news/2018/may/29/the-financial-scandal-no-one-is-talking-about-big-four-accountancy-firms">Accountancy used to be boring and safe, but today it’s neither</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17172613">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17186887">
                                         
-                                            58 comments
+                                            87 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=velmu">velmu</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527517966"
+                                            href="https://news.ycombinator.com/user?id=NN88">NN88</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527680764"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     113 points
                                 </span>
@@ -580,7 +580,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527750004" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527750605" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
