--- a/top_stories/daily/page5.html
+++ b/top_stories/daily/page5.html
@@ -495,17 +495,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="http://deepbitech.org/apple-wwdc-2018-ads-expect/">Apple WWDC 2018: The Ads to Expect</a>
+                                    <a href="https://www.eetimes.com/document.asp?doc_id=1333332&_mc=RSS_EET_EDT">Footsteps, Pressure Sensors, and AI: The Next Step in Airport Security</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17193731">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17194351">
                                         
-                                            2 comments
+                                            1 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=enuose42">enuose42</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527737006"
+                                            href="https://news.ycombinator.com/user?id=rbanffy">rbanffy</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527747946"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     10 points
                                 </span>
@@ -519,17 +519,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.theverge.com/2018/5/30/17406182/california-senate-net-neutrality-vote">CA Senate Votes to Restore Net Neutrality</a>
+                                    <a href="http://deepbitech.org/apple-wwdc-2018-ads-expect/">Apple WWDC 2018: The Ads to Expect</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17192902">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17193731">
                                         
-                                            1 comments
+                                            2 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=wck0">wck0</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527724373"
+                                            href="https://news.ycombinator.com/user?id=enuose42">enuose42</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527737006"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     10 points
                                 </span>
@@ -580,7 +580,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527750004" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527750605" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
