--- a/top_stories/week/page4.html
+++ b/top_stories/week/page4.html
@@ -519,17 +519,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.theguardian.com/environment/2018/may/24/birds-had-to-relearn-flight-after-meteor-that-wiped-out-dinosaurs">Birds had to relearn flight after meteor wiped out dinosaurs</a>
+                                    <a href="https://www.reuters.com/article/us-health-lifespan/china-overtakes-us-for-healthy-lifespan-who-data-idUSKCN1IV15L">China overtakes U.S. for healthy lifespan: WHO data</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17155514">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17192639">
                                         
-                                            72 comments
+                                            151 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=a_w">a_w</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527267029"
+                                            href="https://news.ycombinator.com/user?id=Element_">Element_</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527721234"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     227 points
                                 </span>
@@ -580,7 +580,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527750004" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527750605" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
