--- a/top_stories/daily/page3.html
+++ b/top_stories/daily/page3.html
@@ -243,7 +243,7 @@
                                             href="https://news.ycombinator.com/user?id=wglb">wglb</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527728266"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    49 points
+                                    50 points
                                 </span>
                             </td>
                         </tr>
@@ -339,7 +339,7 @@
                                             href="https://news.ycombinator.com/user?id=majke">majke</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527681791"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    37 points
+                                    38 points
                                 </span>
                             </td>
                         </tr>
@@ -519,19 +519,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="http://www.bbc.co.uk/news/uk-england-devon-44286754">UK Airprox board says police drone and jet had 'near-miss'</a>
+                                    <a href="https://twitter.com/SimoneGiertz/status/1002036156752543746">Simone Giertz is out of surgery and her doctors are very pleased</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17193499">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17194011">
                                         
-                                            21 comments
+                                            1 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=jaytaylor">jaytaylor</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527733408"
+                                            href="https://news.ycombinator.com/user?id=neurotech1">neurotech1</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527741750"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    26 points
+                                    27 points
                                 </span>
                             </td>
                         </tr>
@@ -580,7 +580,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527752403" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527753003" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
