--- a/top_stories/daily/page6.html
+++ b/top_stories/daily/page6.html
@@ -399,19 +399,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://apnews.com/82a98fecee074bfb83731760bfbce515">US to impose limits on some Chinese visas</a>
+                                    <a href="https://www.denialof.services/lambda/">Reverse Engineering AWS Lambda</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17192968">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17187226">
                                         
-                                            1 comments
+                                            comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=vaishaksuresh">vaishaksuresh</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527725198"
+                                            href="https://news.ycombinator.com/user?id=posnet">posnet</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527684483"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    9 points
+                                    10 points
                                 </span>
                             </td>
                         </tr>
@@ -457,7 +457,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527754803" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527755403" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
