--- a/top_stories/daily/page5.html
+++ b/top_stories/daily/page5.html
@@ -183,19 +183,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="http://www.python36.com/how-to-install-tensorflow-gpu-with-cuda-9-2-for-python-on-ubuntu/">How to Install Tensorflow GPU with CUDA 9.2 for Python on Ubuntu</a>
+                                    <a href="https://www.theverge.com/2018/5/29/17407530/evan-spiegel-interview-code-conference-2018">Snap’s CEO weighs in on Facebook’s long history of copying him</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17194288">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17187484">
                                         
                                             2 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=Aryal007">Aryal007</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527746804"
+                                            href="https://news.ycombinator.com/user?id=dsr12">dsr12</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527687199"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    19 points
+                                    20 points
                                 </span>
                             </td>
                         </tr>
@@ -213,7 +213,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17194062">
                                         
-                                            4 comments
+                                            5 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=wanghq">wanghq</a></strong> &nbsp;•&nbsp;
@@ -580,7 +580,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527754803" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527755403" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
