--- a/top_stories/daily/page3.html
+++ b/top_stories/daily/page3.html
@@ -291,7 +291,7 @@
                                             href="https://news.ycombinator.com/user?id=njn">njn</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527737192"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    41 points
+                                    42 points
                                 </span>
                             </td>
                         </tr>
@@ -495,17 +495,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.phoronix.com/scan.php?page=news_item&px=GCC-Comp-Assist-Perf-Analysis">Working on Compiler-Assisted Performance Analysis on GCC</a>
+                                    <a href="https://twitter.com/SimoneGiertz/status/1002036156752543746">Simone Giertz is out of surgery and her doctors are very pleased</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17187427">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17194011">
                                         
-                                            2 comments
+                                            1 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=rbanffy">rbanffy</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527686619"
+                                            href="https://news.ycombinator.com/user?id=neurotech1">neurotech1</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527741750"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     30 points
                                 </span>
@@ -519,17 +519,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="http://bastian.rieck.me/blog/posts/2018/cmake_tips/">Some nice and accurate CMake tips</a>
+                                    <a href="http://www.bbc.co.uk/news/uk-england-devon-44286754">UK Airprox board says police drone and jet had 'near-miss'</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17187055">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17193499">
                                         
-                                            9 comments
+                                            27 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=Topolomancer">Topolomancer</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527682645"
+                                            href="https://news.ycombinator.com/user?id=jaytaylor">jaytaylor</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527733408"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     30 points
                                 </span>
@@ -580,7 +580,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527756603" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527757204" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
