--- a/top_stories/halfweek/page5.html
+++ b/top_stories/halfweek/page5.html
@@ -477,7 +477,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17191307">
                                         
-                                            63 comments
+                                            64 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=tristanj">tristanj</a></strong> &nbsp;•&nbsp;
@@ -519,17 +519,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.wootric.com/blog/our-machine-learning-journey-from-zero-to-customer-value-in-12-months/">Our machine learning and NLP journey</a>
+                                    <a href="http://www.open-std.org/jtc1/sc22/wg21/docs/papers/2018/p0907r0.html">Signed Integers Are Two’s Complement</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17181570">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17190864">
                                         
-                                            27 comments
+                                            70 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=prabhatjha">prabhatjha</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527617167"
+                                            href="https://news.ycombinator.com/user?id=scott_s">scott_s</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527708323"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     111 points
                                 </span>
@@ -580,7 +580,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527758403" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527759003" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
