--- a/top_stories/daily/page6.html
+++ b/top_stories/daily/page6.html
@@ -333,7 +333,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17193458">
                                         
-                                            comments
+                                            1 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=NN88">NN88</a></strong> &nbsp;•&nbsp;
@@ -457,7 +457,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527759003" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527759603" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
