--- a/top_stories/halfweek/index.html
+++ b/top_stories/halfweek/index.html
@@ -195,7 +195,7 @@
                                             href="https://news.ycombinator.com/user?id=Mahn">Mahn</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527702803"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    1125 points
+                                    1130 points
                                 </span>
                             </td>
                         </tr>
@@ -219,7 +219,7 @@
                                             href="https://news.ycombinator.com/user?id=wei_jok">wei_jok</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527641541"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    892 points
+                                    894 points
                                 </span>
                             </td>
                         </tr>
@@ -339,7 +339,7 @@
                                             href="https://news.ycombinator.com/user?id=ytNumbers">ytNumbers</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527604718"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    459 points
+                                    460 points
                                 </span>
                             </td>
                         </tr>
@@ -501,13 +501,13 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17190709">
                                         
-                                            66 comments
+                                            67 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=tomjakubowski">tomjakubowski</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527707442"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    370 points
+                                    377 points
                                 </span>
                             </td>
                         </tr>
@@ -519,17 +519,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.bloomberg.com/news/articles/2018-05-29/facebook-tools-are-used-to-screen-out-older-job-seekers-lawsuit-claims">Facebook Tools Are Used to Screen Out Older Job Seekers, Lawsuit Claims</a>
+                                    <a href="https://www.anandtech.com/show/12828/intel-launches-optane-dimms-up-to-512gb-apache-pass-is-here">Intel Announces Optane DIMMs</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17178565">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17190326">
                                         
-                                            348 comments
+                                            158 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=uptown">uptown</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527597655"
+                                            href="https://news.ycombinator.com/user?id=p1esk">p1esk</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527705455"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     360 points
                                 </span>
@@ -574,7 +574,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527760803" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527761404" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
