--- a/top_stories/daily/page3.html
+++ b/top_stories/daily/page3.html
@@ -291,7 +291,7 @@
                                             href="https://news.ycombinator.com/user?id=njn">njn</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527737192"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    45 points
+                                    46 points
                                 </span>
                             </td>
                         </tr>
@@ -387,7 +387,7 @@
                                             href="https://news.ycombinator.com/user?id=neurotech1">neurotech1</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527741750"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    36 points
+                                    37 points
                                 </span>
                             </td>
                         </tr>
@@ -519,17 +519,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="http://www.bbc.co.uk/news/uk-england-devon-44286754">UK Airprox board says police drone and jet had 'near-miss'</a>
+                                    <a href="https://www.eetimes.com/document.asp?doc_id=1333332&_mc=RSS_EET_EDT">Footsteps, Pressure Sensors, and AI: The Next Step in Airport Security</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17193499">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17194351">
                                         
-                                            30 comments
+                                            13 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=jaytaylor">jaytaylor</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527733408"
+                                            href="https://news.ycombinator.com/user?id=rbanffy">rbanffy</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527747946"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     32 points
                                 </span>
@@ -580,7 +580,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527760803" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527761404" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
