--- a/top_stories/halfweek/page2.html
+++ b/top_stories/halfweek/page2.html
@@ -219,7 +219,7 @@
                                             href="https://news.ycombinator.com/user?id=njn">njn</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527708936"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    240 points
+                                    241 points
                                 </span>
                             </td>
                         </tr>
@@ -459,7 +459,7 @@
                                             href="https://news.ycombinator.com/user?id=pmwkaa">pmwkaa</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527686710"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    191 points
+                                    192 points
                                 </span>
                             </td>
                         </tr>
@@ -519,17 +519,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://mtlynch.io/since-quitting/">What I’ve Been Doing Since Quitting My Job</a>
+                                    <a href="https://www.slideshare.net/kleinerperkins/internet-trends-report-2018-99574140">Mary Meeker Internet Trends Report 2018</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17186865">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17189406">
                                         
-                                            108 comments
+                                            65 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=TonnyGaric">TonnyGaric</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527680549"
+                                            href="https://news.ycombinator.com/user?id=kbal11">kbal11</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527699700"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     183 points
                                 </span>
@@ -580,7 +580,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527762003" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527762603" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
