--- a/top_stories/week/page4.html
+++ b/top_stories/week/page4.html
@@ -183,19 +183,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.johnwdefeo.com/articles/why-i-write-letters-to-ceos">I Write Letters to CEOs</a>
+                                    <a href="https://www.health.harvard.edu/blog/mind-over-matter-how-fit-you-think-you-are-versus-actual-fitness-2017081412282">Perceived Physical Activity and Mortality: Study</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17192926">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17172287">
                                         
-                                            96 comments
+                                            155 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=henryjones">henryjones</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527724639"
+                                            href="https://news.ycombinator.com/user?id=giffarage">giffarage</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527514410"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    256 points
+                                    258 points
                                 </span>
                             </td>
                         </tr>
@@ -285,13 +285,13 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17190992">
                                         
-                                            200 comments
+                                            203 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=njn">njn</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527708936"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    247 points
+                                    249 points
                                 </span>
                             </td>
                         </tr>
@@ -483,7 +483,7 @@
                                             href="https://news.ycombinator.com/user?id=jhchen">jhchen</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527692685"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    237 points
+                                    238 points
                                 </span>
                             </td>
                         </tr>
@@ -580,7 +580,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527763203" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527763803" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
