--- a/top_stories/daily/page4.html
+++ b/top_stories/daily/page4.html
@@ -183,19 +183,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="http://www.python36.com/how-to-install-tensorflow-gpu-with-cuda-9-2-for-python-on-ubuntu/">How to Install Tensorflow GPU with CUDA 9.2 for Python on Ubuntu</a>
+                                    <a href="https://www.phoronix.com/scan.php?page=article&item=linux417-nvme-io&num=1">Linux 4.17 I/O Scheduler Tests on an NVMe SSD Yield Surprising Results</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17194288">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17188294">
                                         
-                                            4 comments
+                                            7 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=Aryal007">Aryal007</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527746804"
+                                            href="https://news.ycombinator.com/user?id=rbanffy">rbanffy</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527693177"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    32 points
+                                    33 points
                                 </span>
                             </td>
                         </tr>
@@ -291,7 +291,7 @@
                                             href="https://news.ycombinator.com/user?id=watchdogtimer">watchdogtimer</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527760681"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    27 points
+                                    29 points
                                 </span>
                             </td>
                         </tr>
@@ -519,17 +519,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.theverge.com/2018/5/29/17407530/evan-spiegel-interview-code-conference-2018">Snap’s CEO weighs in on Facebook’s long history of copying him</a>
+                                    <a href="https://www.eetimes.com/document.asp?doc_id=1333330&_mc=RSS_EET_EDT">DSP Inside TI Radar Puts AI on Edge</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17187484">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17194342">
                                         
-                                            2 comments
+                                            7 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=dsr12">dsr12</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527687199"
+                                            href="https://news.ycombinator.com/user?id=rbanffy">rbanffy</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527747796"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     20 points
                                 </span>
@@ -580,7 +580,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527765004" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527765603" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
