--- a/top_stories/week/page1.html
+++ b/top_stories/week/page1.html
@@ -363,7 +363,7 @@
                                             href="https://news.ycombinator.com/user?id=tomjakubowski">tomjakubowski</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527707442"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    399 points
+                                    403 points
                                 </span>
                             </td>
                         </tr>
@@ -519,17 +519,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="http://diamondssuck.com/">Diamonds Suck (2006)</a>
+                                    <a href="https://www.anandtech.com/show/12828/intel-launches-optane-dimms-up-to-512gb-apache-pass-is-here">Intel Announces Optane DIMMs</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17186457">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17190326">
                                         
-                                            212 comments
+                                            165 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=nsomaru">nsomaru</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527675260"
+                                            href="https://news.ycombinator.com/user?id=p1esk">p1esk</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527705455"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     383 points
                                 </span>
@@ -580,7 +580,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527766803" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527767403" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
